[package]
name = "asyncb"
version = "0.1.0"
authors = ["james <ganzhi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
pretty_env_logger = "0.4"

[[bin]]
name = "unsafet"           # The name of the target.
path = "src/unsafet.rs"    # The source file of the target.