[package]
name = "trymarker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
pin-project = "1.0.12"
reqwest = "0.11.12"
tokio = { version = "1", features = ["full"] }

[[bin]]
name = "test-pin"
path = "src/testpin.rs"
