[package]
name = "webserver"
version = "0.1.0"
authors = ["james <ganzhi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5.8"
serde = { version = "1.0", features = ["derive"] }
threadpool = { version = "1.8.1"}
num_cpus = { version = "1.13.0"}
indoc = "1.0"
log = "0.4.14"
simplelog = "^0.10.0"

[dev-dependencies]
reqwest = { version = "0.11", features = ["blocking"]}